--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cross-env DEBUG=OhYes ./node_modules/.bin/webpack-dev-server",
     "copy-public": "node copy-public.js"
   },
   "repository": {
@@ -18,7 +19,19 @@
   },
   "homepage": "https://github.com/DomDumont/HauntedCastle#readme",
   "devDependencies": {
+    "@types/debug": "0.0.30",
+    "@types/node": "^8.0.54",
+    "awesome-typescript-loader": "^3.4.1",
+    "cross-env": "^5.1.1",
+    "file-loader": "^1.1.5",
     "fs-extra": "^4.0.2",
-    "phaser-ce": "^2.9.2"
+    "phaser-ce": "^2.9.2",
+    "tslint": "^5.8.0",
+    "typescript": "^2.6.2",
+    "webpack": "^3.9.1",
+    "webpack-dev-server": "^2.9.5"
+  },
+  "dependencies": {
+    "debug": "^3.1.0"
   }
 }
