--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/debug": "0.0.30",
     "@types/node": "^8.0.54",
+    "@types/webfontloader": "^1.6.29",
     "awesome-typescript-loader": "^3.4.1",
     "cross-env": "^5.1.1",
     "file-loader": "^1.1.5",
@@ -32,6 +33,7 @@
     "webpack-dev-server": "^2.9.5"
   },
   "dependencies": {
-    "debug": "^3.1.0"
+    "debug": "^3.1.0",
+    "webfontloader": "^1.6.28"
   }
 }
